// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Menu > Menu.Item > render with borderless props 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: inherit;
  padding: 0.25rem 0.5rem;
  border: none;
  cursor: pointer;
  min-width: 110px;
  color: #3f4250;
  background: none;
}

.emotion-0 svg {
  fill: #3f4250;
}

.emotion-0:hover,
.emotion-0:focus {
  color: #222638;
}

.emotion-0:hover svg,
.emotion-0:focus svg {
  fill: #222638;
}

<div
    data-testid="testing"
  >
    <button
      class="emotion-0 emotion-1"
      role="menuitem"
      type="button"
    >
      Borderless Props
    </button>
  </div>
</DocumentFragment>
`;

exports[`Menu > Menu.Item > render with default props 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: inherit;
  padding: 0.25rem 0.5rem;
  border: none;
  border-bottom: 1px solid #d9dadd;
  cursor: pointer;
  min-width: 110px;
  color: #3f4250;
  background: none;
}

.emotion-0 svg {
  fill: #3f4250;
}

.emotion-0:hover,
.emotion-0:focus {
  color: #222638;
}

.emotion-0:hover svg,
.emotion-0:focus svg {
  fill: #222638;
}

.emotion-0 {
  display: inline-block;
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: inherit;
  padding: 0.25rem 0.5rem;
  border: none;
  border-bottom: 1px solid #d9dadd;
  cursor: pointer;
  min-width: 110px;
  color: #3f4250;
  background: none;
}

.emotion-0 svg {
  fill: #3f4250;
}

.emotion-0:hover,
.emotion-0:focus {
  color: #222638;
}

.emotion-0:hover svg,
.emotion-0:focus svg {
  fill: #222638;
}

<div
    data-testid="testing"
  >
    <button
      class="emotion-0 emotion-1"
      role="menuitem"
      type="button"
    >
      Default Props
    </button>
  </div>
</DocumentFragment>
`;

exports[`Menu > Menu.Item > render with disabled props 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: inherit;
  padding: 0.25rem 0.5rem;
  border: none;
  border-bottom: 1px solid #d9dadd;
  cursor: pointer;
  min-width: 110px;
  color: #b5b7bd;
  cursor: not-allowed;
  background: none;
}

.emotion-0 svg {
  fill: #b5b7bd;
}

.emotion-0 {
  display: inline-block;
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: inherit;
  padding: 0.25rem 0.5rem;
  border: none;
  border-bottom: 1px solid #d9dadd;
  cursor: pointer;
  min-width: 110px;
  color: #b5b7bd;
  cursor: not-allowed;
  background: none;
}

.emotion-0 svg {
  fill: #b5b7bd;
}

<div
    data-testid="testing"
  >
    <button
      class="emotion-0 emotion-1"
      disabled=""
      role="menuitem"
      type="button"
    >
      Disabled Props
    </button>
  </div>
</DocumentFragment>
`;

exports[`Menu > Menu.Item > render with sentiment danger 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: inherit;
  padding: 0.25rem 0.5rem;
  border: none;
  border-bottom: 1px solid #d9dadd;
  cursor: pointer;
  min-width: 110px;
  color: #b3144d;
  background: none;
}

.emotion-0 svg {
  fill: #b3144d;
}

.emotion-0:hover,
.emotion-0:focus {
  color: #92103f;
}

.emotion-0:hover svg,
.emotion-0:focus svg {
  fill: #92103f;
}

<div
    data-testid="testing"
  >
    <button
      class="emotion-0 emotion-1"
      role="menuitem"
      type="button"
    >
      Danger
    </button>
  </div>
</DocumentFragment>
`;

exports[`Menu > placement > renders "bottom" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="bottom"
      aria-expanded="true"
      aria-haspopup="dialog"
      type="button"
    >
      Menu
    </button>
  </div>
</DocumentFragment>
`;

exports[`Menu > placement > renders "bottom-end" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="bottom-end"
      aria-expanded="true"
      aria-haspopup="dialog"
      type="button"
    >
      Menu
    </button>
  </div>
</DocumentFragment>
`;

exports[`Menu > placement > renders "bottom-start" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="bottom-start"
      aria-expanded="true"
      aria-haspopup="dialog"
      type="button"
    >
      Menu
    </button>
  </div>
</DocumentFragment>
`;

exports[`Menu > placement > renders "top" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="top"
      aria-expanded="true"
      aria-haspopup="dialog"
      type="button"
    >
      Menu
    </button>
  </div>
</DocumentFragment>
`;

exports[`Menu > placement > renders "top-end" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="top-end"
      aria-expanded="true"
      aria-haspopup="dialog"
      type="button"
    >
      Menu
    </button>
  </div>
</DocumentFragment>
`;

exports[`Menu > placement > renders "top-start" 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="top-start"
      aria-expanded="true"
      aria-haspopup="dialog"
      type="button"
    >
      Menu
    </button>
  </div>
</DocumentFragment>
`;

exports[`Menu > renders with Menu.Item 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="menu"
      aria-expanded="true"
      aria-haspopup="dialog"
      type="button"
    >
      Menu
    </button>
  </div>
</DocumentFragment>
`;

exports[`Menu > renders with Menu.ItemLink & Menu.Item disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="menu-1"
      aria-expanded="true"
      aria-haspopup="dialog"
      type="button"
    >
      Menu
    </button>
  </div>
</DocumentFragment>
`;

exports[`Menu > renders with Menu.ItemLink 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="menu-1"
      aria-expanded="true"
      aria-haspopup="dialog"
      type="button"
    >
      Menu
    </button>
  </div>
</DocumentFragment>
`;

exports[`Menu > renders with disclosure not a function 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="menu"
      aria-expanded="false"
      aria-haspopup="dialog"
      type="button"
    >
      Menu is visible
    </button>
  </div>
</DocumentFragment>
`;

exports[`Menu > renders with visible=false 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="menu"
      aria-expanded="false"
      aria-haspopup="dialog"
      type="button"
    >
      Menu is visible
    </button>
  </div>
</DocumentFragment>
`;
